 - Damage types (more flexible basic attack). Damage hp/sp/lp
 - Delayed actions/casting time
 - Retargetting (fallen)
 - Ability cooldowns
 - Making parser usage easier!
 - Cancellable
 - Spell stack
* Actual effects of rewrite:
 - Default attack replaced
 - Bash replaced. Now has a cancelling effect and a 3 turn cooldown

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4a2
-------------
* Fixed a bug where Layla would appear pregnant when actually Terry was. Weird, that.
* Increased the timespan when Layla could be encountered to 8-18.
* Fixed a Bull Tower bug that would cause the ending to loop, resulting in all kinds of weirdness.
* Increased the suspicion gain from moving about in Bull Tower, making it more difficult to get away clean. Perfect run should be 60 suspicion.
* Increased the lust gain from Corishev's whip.

Version 0.4a
------------
* The Bull Tower: Huge new dungeon, in the style of Krawitz quest. Written by The Observer.
 - Get at least 60 rel with Cveta at the Outlaws (need to meet with her dawn and dusk a few times to get past the initial barrier), then enter the Outlaw camp
 - This one should be much more complex than Krawitz, and offer more rewards. If you score well, you can return to the Outlaw camp after a few days to cash in your reward.
* Lagon level adjusted to better reflect his difficulty.
* Fixed a bug in Terry get oral.
* Fixed a bug in some characters' leveling pace.

Version 0.3z
------------
* Naga mating scene (written by LonelyRonin) added (requires player being a naga and losing to the naga)
* The rest of the Terry Get Oral scene implemented, written by LD/QB
* Gwendy no longer remains in your passive party after you do the Layla sequence.
* A new scene for the Zebra shaman, written by Bluebusterman: Loss, get fucked. You need a pussy.
* Vena has some minor interactions in the Pit (not restored). No sex yet.
* Various minor bugs fixed